--- a/styles/1.header/header.scss
+++ b/styles/1.header/header.scss
@@ -1,3 +1,5 @@
+@import url('./../0.root/root.css');
+
 html {
     font-family: Rubik;
     padding: 55px 136px;
@@ -8,13 +10,7 @@ body {
     width: 100%;
 }
 
-:root {
-    --primary-color: #363853;
-    --secondary-color: #ff7a50;
-    --main-back-white: #fff;
-    --radius: 10rem;
-    --black: #3D3D3D;
-}
+
 
 .second-color {
     color: var(--secondary-color);
@@ -40,6 +36,12 @@ body {
         background-color: var(--primary-color);
         transition: .5s ease;
     }
+    &:active{
+        transform: scale(.95);
+        transition: 0s ease;
+        background-color: var(--primary-color);
+
+    }
 }
 
 nav {
@@ -48,7 +50,7 @@ nav {
 }
 
 .img-msg-box {
-position: relative;
+    position: absolute;
     content: "";
     right: 25%;
     top: 40%;
@@ -59,7 +61,7 @@ position: relative;
     background: radial-gradient(50% 50.00% at 50% 50.00%, #FEF8F5 0%, rgba(255, 255, 255, 0.79) 100%);
     z-index: 99;
     box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.12);
-    animation: rotatingWindows 15s linear infinite;
+    animation: rotatingWindows 30s linear infinite;
     padding: 5px 9px;
     display: flex;
     align-items: center;
