fix text position

--- a/styles/0.main/main.css
+++ b/styles/0.main/main.css
@@ -1,3 +1,9 @@
+body {
+  margin: 0 auto;
+}
+
 html {
   background: #f8f8fe;
-}/*# sourceMappingURL=main.css.map */
+}
+
+/*# sourceMappingURL=main.css.map */
