--- a/styles/1.header/header.css
+++ b/styles/1.header/header.css
@@ -48,9 +48,7 @@ nav {
   content: "";
   right: 25%;
   top: 40%;
-  width: -moz-fit-content;
   width: fit-content;
-  height: -moz-fit-content;
   height: fit-content;
   background-color: red;
   border-radius: 6px;
@@ -143,6 +141,10 @@ nav {
   height: 681px;
   max-width: 530px;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
 }
 .header-preview__text-title {
   color: var(--primary-color);
@@ -594,4 +596,6 @@ nav {
   100% {
     transform: translate(calc(var(--radius) * sin(360deg)), calc(var(--radius) * cos(360deg)));
   }
-}/*# sourceMappingURL=header.css.map */
+}
+
+/*# sourceMappingURL=header.css.map */
