--- a/styles/1.header/header.scss
+++ b/styles/1.header/header.scss
@@ -162,6 +162,11 @@ nav {
             height: 681px;
             max-width: 530px;
             width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: start;
+            justify-content: center;
+
 
             &-title {
                 color: var(--primary-color);
