--- a/styles/1.header/header.css
+++ b/styles/1.header/header.css
@@ -48,7 +48,9 @@ nav {
   content: "";
   right: 25%;
   top: 40%;
+  width: -moz-fit-content;
   width: fit-content;
+  height: -moz-fit-content;
   height: fit-content;
   background-color: red;
   border-radius: 6px;
@@ -596,6 +598,4 @@ nav {
   100% {
     transform: translate(calc(var(--radius) * sin(360deg)), calc(var(--radius) * cos(360deg)));
   }
-}
-
-/*# sourceMappingURL=header.css.map */
+}/*# sourceMappingURL=header.css.map */
