--- a/styles/2.section-popular/section-popular.css
+++ b/styles/2.section-popular/section-popular.css
@@ -128,6 +128,4 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
-
-/*# sourceMappingURL=section-popular.css.map */
+}/*# sourceMappingURL=section-popular.css.map */
