--- a/styles/3.section-stay-at-home/stay-at-home.css
+++ b/styles/3.section-stay-at-home/stay-at-home.css
@@ -1,6 +1,7 @@
-.stay-at-home {
+.section-stayAtHome {
   margin-bottom: 128px;
 }
+
 .stay-at-home__title {
   width: 384px;
   font-size: 36px;
@@ -18,20 +19,19 @@
   font-weight: 400;
   line-height: 30px;
 }
-.stay-at-home__statistics:nth-child(n) {
-  margin-bottom: 25px;
-}
 .stay-at-home__statistics-data {
   display: flex;
   justify-content: start;
   align-items: center;
   gap: 32px;
+  margin-bottom: 25px;
+}
+.stay-at-home__statistics-data:last-child {
+  margin-bottom: 50px;
 }
 
 .mod-btn {
   width: 176px;
   height: 58px;
   border-radius: 30px 30px 1px 30px;
-}
-
-/*# sourceMappingURL=stay-at-home.css.map */
+}/*# sourceMappingURL=stay-at-home.css.map */
