--- a/styles/4.section-top-food/section-top-food.scss
+++ b/styles/4.section-top-food/section-top-food.scss
@@ -1,5 +1,66 @@
-.section-topFood{
-  &__header{
-  text-align: center;
+.section-topFood {
+  margin-bottom: 165px;
+  &__header {
+    text-align: center;
   }
+
+  &__cards {
+    /* display: flex;
+    flex-wrap: wrap; */
+    justify-content: space-between;
+
+    &-card {
+      background: white;
+      width: 361px;
+      height: 417px;
+      flex-shrink: 0;
+      border-radius: 53px 5px;
+    }
+  }
+}
+
+
+.topFood__card {
+
+  &-img {
+    width: 361px;
+    height: 299px;
+    border-radius: 53px 5px 0px 0px;
+    margin-bottom: 22px;
+  }
+
+  &-name {
+    margin-left: 20px;
+    color: var(--primary, #363853);
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    margin-bottom: 15px;
+  }
+
+  &-box {
+    margin-left: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+
+
+    &>svg {
+      margin-right: 10px;
+    }
+
+    &>p {
+      margin-right: 30px;
+    }
+
+
+  }
+}
+
+.top-food-btn {
+  width: 79px;
+  height: 33px;
+  display: flex;
+  align-items: center;
 }
