--- a/styles/1.header/header.scss
+++ b/styles/1.header/header.scss
@@ -30,6 +30,7 @@ body {
     font-weight: 400;
     line-height: normal;
     transition: .5s ease;
+    animation: pulsate 2s infinite;
 
 
     &:hover {
