--- a/styles/5.section-app/section-app.css
+++ b/styles/5.section-app/section-app.css
@@ -1,4 +1,49 @@
+.section-app {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 165px;
+}
+.section-app__text {
+  max-width: 538px;
+  width: 100%;
+  height: 244px;
+  margin: auto 0;
+}
+.section-app__text-header {
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 50px;
+  text-transform: capitalize;
+  margin-bottom: 30px;
+}
+.section-app__text-subtitle {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+  margin-bottom: 30px;
+}
+.section-app__text-links {
+  display: flex;
+  gap: 35px;
+}
+.section-app__text-links__link {
+  transition: 0.5s linear;
+  animation: pulsate 2s infinite;
+}
+.section-app__text-links__link:nth-child(odd) {
+  animation-delay: 1s;
+}
+.section-app__text-links__link:hover {
+  transform: scale(1.1);
+  transition: 0.5s linear;
+}
 .section-app__screenshots {
+  max-width: 616.743px;
+  width: 100%;
+  max-height: 480.593px;
+  height: 100%;
   display: flex;
 }
 
@@ -16,4 +61,16 @@
   position: relative;
   right: 105px;
   z-index: 1;
+}
+
+@keyframes pulsate {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
 }/*# sourceMappingURL=section-app.css.map */
