--- a/styles/5.section-app/section-app.scss
+++ b/styles/5.section-app/section-app.scss
@@ -1,5 +1,62 @@
 .section-app {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 165px;
+
+    &__text {
+        max-width: 538px;
+        width: 100%;
+        height: 244px;
+        margin: auto 0;
+
+        
+
+        &-header {
+            font-size: 36px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 50px;
+            text-transform: capitalize;
+            margin-bottom: 30px;
+        }
+
+        &-subtitle {
+            font-size: 20px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 30px;
+            margin-bottom: 30px;
+        }
+
+        &-links {
+            display: flex;
+            gap: 35px;
+
+            
+
+
+            &__link {
+                transition: .5s linear;
+                animation: pulsate 2s infinite;
+
+                &:nth-child(odd){
+                    animation-delay: 1s;
+                }
+
+                &:hover {
+                    transform: scale(1.1);
+                    transition: .5s linear;
+                }
+            }
+
+        }
+    }
+
     &__screenshots {
+        max-width: 616.743px;
+        width: 100%;
+        max-height: 480.593px;
+        height: 100%;
         display: flex;
     }
 }
@@ -9,11 +66,25 @@
     left: 105px;
     z-index: 1;
 }
+
 .screenshot-2 {
     z-index: 2;
 }
+
 .screenshot-3 {
     position: relative;
     right: 105px;
     z-index: 1;
 }
+
+@keyframes pulsate {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.1);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
