--- a/styles/6.section-feedback/section-feedback.css
+++ b/styles/6.section-feedback/section-feedback.css
@@ -3,6 +3,69 @@
   margin-bottom: 68px;
 }
 
-.feedback-block {
+.feedback-name {
+  color: var(--secondary, #FF7A50);
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.feedback-name-and-buttons {
   display: flex;
+  justify-content: space-between;
+}
+.feedback-block {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+.feedback-buttons {
+  display: flex;
+  gap: 44px;
+}
+.feedback-buttons__button {
+  border: 0;
+  background: inherit;
+  transition: 0.5s ease;
+  cursor: pointer;
+  font-size: 25px;
+}
+.feedback-buttons__button:hover {
+  color: var(--secondary, #FF7A50);
+  transition: 0.5s ease;
+}
+.feedback-content {
+  flex: 2;
+  padding-top: 40px;
+  min-width: 300px;
+  width: 50%;
+}
+.feedback-text {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 45px;
+  letter-spacing: 0.5px;
+  margin-bottom: 74px;
+}
+.feedback-image {
+  align-items: center;
+  max-height: 520px;
+  max-width: 433px;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  overflow: hidden;
+  border-radius: 24px;
+  box-shadow: 0px 22px 40px 0px rgba(254, 182, 54, 0.08);
+  transition: 0.5s ease;
+}
+.feedback-image-div {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.5s ease;
 }/*# sourceMappingURL=section-feedback.css.map */
