--- a/styles/6.section-feedback/section-feedback.scss
+++ b/styles/6.section-feedback/section-feedback.scss
@@ -1,13 +1,86 @@
-.section-feedback{
+.section-feedback {
 
-    &__title{
+    &__title {
         text-align: center;
         margin-bottom: 68px;
     }
 }
 
-.feedback{
-    &-block{
+.feedback {
+
+    &-name {
+        color: var(--secondary, #FF7A50);
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+
+        &-and-buttons {
+            display: flex;
+            justify-content: space-between;
+        }
+    }
+
+    &-block {
+        width: 100%;
         display: flex;
+        flex-wrap: wrap;
+        gap: 20px;
+    }
+
+    &-buttons {
+        display: flex;
+        gap: 44px;
+
+        &__button {
+            border: 0;
+            background: inherit;
+            transition: .5s ease;
+            cursor: pointer;
+            font-size: 25px;
+
+            &:hover {
+                color: var(--secondary, #FF7A50);
+                transition: .5s ease;
+
+            }
+        }
+    }
+
+    &-content {
+        flex: 2;
+        padding-top: 40px;
+        min-width: 300px;
+        width: 50%;
+    }
+
+    &-text {
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 45px;
+        letter-spacing: 0.5px;
+        margin-bottom: 74px;
+    }
+
+    &-image {
+        align-items: center;
+        max-height: 520px;
+        max-width: 433px;
+        width: fit-content;
+        height: fit-content;
+        overflow: hidden;
+        border-radius: 24px;
+        box-shadow: 0px 22px 40px 0px rgba(254, 182, 54, 0.08);
+        transition: .5s ease;
+
+        &-div {
+            flex: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: .5s ease;
+
+        }
     }
 }
