--- a/styles/6.section-feedback/section-feedback.scss
+++ b/styles/6.section-feedback/section-feedback.scss
@@ -1,8 +1,11 @@
 .section-feedback {
 
+    margin-bottom: 125px;
+
     &__title {
         text-align: center;
         margin-bottom: 68px;
+    
     }
 }
 
