commence make clider

--- a/styles/0.main/main.css
+++ b/styles/0.main/main.css
@@ -12,4 +12,6 @@ html {
   grid-template-columns: repeat(auto-fill, minmax(361px, 1fr));
   gap: 10px;
   row-gap: 43px;
-}/*# sourceMappingURL=main.css.map */
+}
+
+/*# sourceMappingURL=main.css.map */
