--- a/styles/4.section-top-food/section-top-food.css
+++ b/styles/4.section-top-food/section-top-food.css
@@ -52,4 +52,6 @@
 }
 .top-food-btn:nth-child(odd) {
   animation-delay: 1s;
-}/*# sourceMappingURL=section-top-food.css.map */
+}
+
+/*# sourceMappingURL=section-top-food.css.map */
