--- a/styles/5.section-app/section-app.css
+++ b/styles/5.section-app/section-app.css
@@ -73,4 +73,6 @@
   100% {
     transform: scale(1);
   }
-}/*# sourceMappingURL=section-app.css.map */
+}
+
+/*# sourceMappingURL=section-app.css.map */
