--- a/styles/6.section-feedback/section-feedback.css
+++ b/styles/6.section-feedback/section-feedback.css
@@ -56,9 +56,7 @@
   align-items: center;
   max-height: 520px;
   max-width: 433px;
-  width: -moz-fit-content;
   width: fit-content;
-  height: -moz-fit-content;
   height: fit-content;
   overflow: hidden;
   border-radius: 24px;
@@ -71,4 +69,6 @@
   align-items: center;
   justify-content: center;
   transition: 0.5s ease;
-}/*# sourceMappingURL=section-feedback.css.map */
+}
+
+/*# sourceMappingURL=section-feedback.css.map */
