--- a/styles/7.section-subsribe/section-sibscribe.scss
+++ b/styles/7.section-subsribe/section-sibscribe.scss
@@ -7,6 +7,7 @@
     padding: 59px 165px;
     background: var(--secondary-color);
     border-radius: 20px;
+    margin-bottom: 120px;
 
     &__title {
         color: var(--main-back-white);
