--- a/styles/4.section-top-food/section-top-food.scss
+++ b/styles/4.section-top-food/section-top-food.scss
@@ -68,3 +68,9 @@
     animation-delay: 1s;
   }
 }
+
+@media screen and (max-width: 1200px) {
+  .section-topFood__cards-card{
+    margin: 0 auto;
+  }
+}
