--- a/styles/0.main/main.css
+++ b/styles/0.main/main.css
@@ -1,17 +1,28 @@
 body {
   margin: 0 auto;
+  max-width: 1440px;
+  width: 100%;
 }
 
 html {
   background: #f9f9fc;
+  font-family: Rubik;
+  padding: 55px 136px;
 }
 
 .grid-container {
-  display: grid;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 40px;
+  /* display: grid;
   grid-template-rows: auto;
   grid-template-columns: repeat(auto-fill, minmax(361px, 1fr));
-  gap: 10px;
-  row-gap: 43px;
+  gap: 40px; */
 }
 
-/*# sourceMappingURL=main.css.map */
+@media screen and (max-width: 1200px) {
+  html {
+    padding: 50px;
+  }
+}/*# sourceMappingURL=main.css.map */
