--- a/styles/1.header/header.scss
+++ b/styles/1.header/header.scss
@@ -1,14 +1,6 @@
 @import url('./../0.root/root.css');
 
-html {
-    font-family: Rubik;
-    padding: 55px 136px;
-}
 
-body {
-    max-width: 1440px;
-    width: 100%;
-}
 
 
 
@@ -37,7 +29,8 @@ body {
         background-color: var(--primary-color);
         transition: .5s ease;
     }
-    &:active{
+
+    &:active {
         transform: scale(.95);
         transition: 0s ease;
         background-color: var(--primary-color);
@@ -144,7 +137,6 @@ nav {
     &-nav {
         display: flex;
         width: 624px;
-
         justify-content: space-between;
         gap: 60px;
         align-items: center;
@@ -249,4 +241,66 @@ nav {
             transform: translate($x, $y);
         }
     }
+}
+
+@media screen and (max-width: 1200px) {
+    .header-nav {
+        display: none;
+    }
+
+    .header-preview {
+
+        flex-direction: column-reverse;
+
+        &__text {
+            height: auto;
+            margin: 0 auto;
+            margin-bottom: 50px;
+            text-align: center;
+
+            &-btns {
+                justify-content: space-between;
+                width: 100%;
+            }
+        }
+
+        &__images {
+            margin: 0 auto;
+            width: 100%;
+            margin-bottom: 50px;
+
+            & img{
+                margin: 0 auto;
+            }
+        }
+    }
+
+    .img-msg-box {
+        top: 70%;
+        right: 40%;
+    }
+}
+
+
+@media screen and (max-width: 768px) {
+    .header-nav {
+        display: none;
+    }
+
+    .header-preview {
+        display: block;
+
+        &__text {
+            height: auto;
+        }
+
+        &__images img{
+            margin: 0 auto;
+        }
+    }
+
+    .img-msg-box {
+        display: none;
+    }
+
 }
