--- a/styles/2.section-popular/section-popular.scss
+++ b/styles/2.section-popular/section-popular.scss
@@ -13,13 +13,10 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-
-
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 8px;
-
     cursor: pointer;
 
     &:hover {
@@ -66,4 +63,50 @@
 
     }
 
+}
+
+#products-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+
+
+
+.product {
+    width: 208px;
+    height: 279px;
+    align-items: center;
+    text-align: center;
+    border-radius: 12px;
+    background: #FFF;
+
+    & img {
+        box-sizing: border-box;
+        width: 144px;
+        height: 144px;
+        margin: 0 auto;
+    }
+}
+
+.rating {
+    position: relative;
+    top: -20pxvjd;
+}
+
+@media screen and (max-width: 1330px) {
+    #products-container {
+        flex-wrap: wrap;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .section-popular__food-cathegory {
+        align-items: center;
+        JUSTIFY-CONTENT: CENTER;
+        gap: 10px;
+    }
+    .product{
+        margin: 0 auto;
+    }
 }
