--- a/styles/3.section-stay-at-home/stay-at-home.css
+++ b/styles/3.section-stay-at-home/stay-at-home.css
@@ -34,4 +34,26 @@
   width: 176px;
   height: 58px;
   border-radius: 30px 30px 1px 30px;
+}
+
+@media screen and (max-width: 1200px) {
+  .stay-at-home {
+    text-align: center;
+  }
+  .stay-at-home__title {
+    width: 100%;
+  }
+  .stay-at-home__text {
+    width: 100%;
+  }
+  .stay-at-home__text-btn {
+    margin: 0 auto;
+  }
+  .stay-at-home__statistics {
+    width: 100%;
+    align-items: center;
+  }
+  .stay-at-home__statistics-data {
+    justify-content: center;
+  }
 }/*# sourceMappingURL=stay-at-home.css.map */
