--- a/styles/3.section-stay-at-home/stay-at-home.scss
+++ b/styles/3.section-stay-at-home/stay-at-home.scss
@@ -46,3 +46,33 @@
   height: 58px;
   border-radius: 30px 30px 1px 30px;
 }
+
+@media screen and (max-width: 1200px) {
+  .stay-at-home {
+    text-align: center;
+
+    &__title {
+      width: 100%;
+
+    }
+
+    &__text {
+      width: 100%;
+
+      &-btn{
+        margin: 0 auto;
+      }
+
+    }
+
+    &__statistics {
+      width: 100%;
+      align-items: center;
+      &-data {
+      justify-content: center;
+
+      }
+    }
+  }
+
+}
