--- a/styles/4.section-top-food/section-top-food.css
+++ b/styles/4.section-top-food/section-top-food.css
@@ -54,4 +54,8 @@
   animation-delay: 1s;
 }
 
-/*# sourceMappingURL=section-top-food.css.map */
+@media screen and (max-width: 1200px) {
+  .section-topFood__cards-card {
+    margin: 0 auto;
+  }
+}/*# sourceMappingURL=section-top-food.css.map */
