--- a/styles/5.section-app/section-app.css
+++ b/styles/5.section-app/section-app.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 165px;
+  justify-content: space-between;
 }
 .section-app__text {
   max-width: 538px;
@@ -40,8 +41,6 @@
   transition: 0.5s linear;
 }
 .section-app__screenshots {
-  max-width: 616.743px;
-  width: 100%;
   max-height: 480.593px;
   height: 100%;
   display: flex;
@@ -74,5 +73,27 @@
     transform: scale(1);
   }
 }
-
-/*# sourceMappingURL=section-app.css.map */
+@media screen and (max-width: 1200px) {
+  .section-app {
+    text-align: center;
+    width: 100%;
+  }
+  .section-app__text {
+    max-width: 100%;
+    margin-bottom: 50px;
+  }
+  .section-app__text-links {
+    justify-content: center;
+  }
+  .section-app-header {
+    margin: 0 auto;
+  }
+  .section-app-subtitles {
+    margin: 0 auto;
+  }
+  .section-app__screenshots {
+    justify-content: center;
+    margin: 0 auto;
+    margin-top: 80px;
+  }
+}/*# sourceMappingURL=section-app.css.map */
