--- a/styles/5.section-app/section-app.scss
+++ b/styles/5.section-app/section-app.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 165px;
+    justify-content: space-between;
 
     &__text {
         max-width: 538px;
@@ -9,7 +10,7 @@
         height: 244px;
         margin: auto 0;
 
-        
+
 
         &-header {
             font-size: 36px;
@@ -32,14 +33,14 @@
             display: flex;
             gap: 35px;
 
-            
+
 
 
             &__link {
                 transition: .5s linear;
                 animation: pulsate 2s infinite;
 
-                &:nth-child(odd){
+                &:nth-child(odd) {
                     animation-delay: 1s;
                 }
 
@@ -53,8 +54,6 @@
     }
 
     &__screenshots {
-        max-width: 616.743px;
-        width: 100%;
         max-height: 480.593px;
         height: 100%;
         display: flex;
@@ -79,12 +78,45 @@
 
 @keyframes pulsate {
     0% {
-      transform: scale(1);
+        transform: scale(1);
     }
+
     50% {
-      transform: scale(1.1);
+        transform: scale(1.1);
     }
+
     100% {
-      transform: scale(1);
+        transform: scale(1);
     }
-  }
+}
+
+@media screen and (max-width: 1200px) {
+    .section-app {
+        text-align: center;
+        width: 100%;
+
+        &__text {
+            max-width: 100%;
+            margin-bottom: 50px;
+
+            &-links {
+                justify-content: center;
+            }
+        }
+
+        &-header {
+            margin: 0 auto;
+        }
+
+        &-subtitles {
+            margin: 0 auto;
+        }
+
+        &__screenshots {
+            justify-content: center;
+            margin: 0 auto;
+            margin-top: 80px;
+        }
+
+    }
+}
